feat: Update weather forecast handling to allow server-side generation of ForecastId and improve payload structure for external compatibility

--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.Web/Components/Pages/Weather.razor
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.Web/Components/Pages/Weather.razor
@@ -381,7 +381,8 @@
         {
             var command = new CreateWeatherForecast
             {
-                ForecastId = Guid.NewGuid(),
+                // Server will generate ForecastId when using external payload
+                ForecastId = Guid.Empty,
                 Location = forecastModel.Location!,
                 Date = DateOnly.FromDateTime(forecastModel.Date!.Value),
                 TemperatureC = forecastModel.TemperatureC,
